fix list alignment

--- a/demo-app/static/css/style.css
+++ b/demo-app/static/css/style.css
@@ -47,7 +47,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .small-avatar {
